--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,19 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 
     // Spring Boot Starter for Session Management
     implementation 'org.springframework.session:spring-session-core'
+
+    // Spring Security for OAuth2 and JWT
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
+
+    implementation 'org.springframework.security:spring-security-web:6.1.0'
+    implementation 'org.springframework.security:spring-security-config:6.1.0'
 
     implementation 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
