--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,14 @@ aws.region=us-west-2
 s3.bucket.name=seller-uploaded-tickets
 
 # Enable H2 Database
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./data/h2-database/ticketrecipedb
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 
 # Show SQL statements in the console
 spring.jpa.show-sql=true
@@ -18,4 +19,3 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 getcertify.qr.code.base.url=https://app.ticketrecipe.com/getcertify/
-
