--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ aws.region=us-west-2
 s3.bucket.name=seller-uploaded-tickets
 
 # Enable H2 Database
-spring.datasource.url=jdbc:h2:file:./data/h2-database/ticketrecipedb
+spring.datasource.url=jdbc:h2:file:/efs/h2-database/ticketrecipedb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
